core/codegen/tests/ui/fails/apply/too_few_args.stderr
error: apply! expectes 2 or 3 arguments
 --> $DIR/too_few_args.rs:7:12
  |
7 |     apply!(0);
  |            ^
